--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "userscript-webpack-patcher",
-    "private": true,
-    "version": "0.0.1",
+    "version": "0.0.2",
     "type": "module",
     "exports": {
         "import": "./dist/index.js",
         "types": "./dist/index.d.ts"
     },
     "scripts": {
+        "dev": "tsup --watch src/**/*.ts",
         "build": "tsup"
     },
     "devDependencies": {
