--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,9 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "Bundler",
-        "esModuleInterop": true,
-        "skipLibCheck": true,
+        "target": "esnext",
+        "module": "esnext",
+        "moduleResolution": "bundler",
         "declaration": true,
-        "emitDeclarationOnly": true,
-        "declarationMap": true,
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
@@ -16,5 +12,5 @@
         "noUncheckedIndexedAccess": true,
         "outDir": "dist"
     },
-    "include": ["src"]
+    "include": ["src/**/*"]
 }
